--- a/bachelor/package.json
+++ b/bachelor/package.json
@@ -9,6 +9,7 @@
     "eslint": "^8.36.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.9",
